--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/icon"
+        android:icon="@mipmap/ic_launcher3"
         android:label="Leftovers"
-        android:roundIcon="@mipmap/icon"
+        android:roundIcon="@mipmap/ic_launcher3"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
