--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-ml-vision:19.0.3'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
 
 
 }
